# hippomocks

./: CMakeLists.txt  example.cpp
.github/workflows/: build.yml
HippoMocks/: hippomocks.h
hippomocks-from-colobot/: hippomocks.h
